--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:       Doctors for Justice in LTC
 email:       doctorsforjusticeinltc@gmail.com
 author:      Docs4LTCJustice
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+description: "We are Doctors, Researchers and Community Members who have come together to say Enough is Enough."
 baseurl:     ""
 url:         "http://docs4ltcjustice.ca"
 date_format: "%b %-d, %Y"
